# energy

./: README.md  compose.yaml  pyproject.toml
exhibitions/: arduino.py  main.py
exhibitions/air-pressure/: Dockerfile  README.md  on_startup.sh  package-lock.json  package.json  start.sh
exhibitions/air-pressure/air_pressure_arduino/: air_pressure_arduino.ino  constants.h
exhibitions/air-pressure/src/: App.css  App.js  BaseApp.js  components.js  idGeneratedStyles.css  texts.js  utils.js
exhibitions/jumping-ring/: package-lock.json  package.json  start.sh
exhibitions/jumping-ring/src/: App.css  App.js  BaseApp.js  components.js  utils.js
serial_to_websocket/: README.md  on_startup.sh  serial_to_websocket.py
